@@ -47,18 +47,6 @@ class TestEPoll(unittest.TestCase):
         self.serverSocket.listen(1)
         self.connections = [self.serverSocket]
 
-    def test_timeout_rounding(self):
-        # epoll_wait() has a resolution of 1 millisecond, check if the timeout
-        # is correctly rounded to the upper bound
-        epoll = select.epoll()
-        self.addCleanup(epoll.close)
-        for timeout in (1e-2, 1e-3, 1e-4):
-            t0 = time.perf_counter()
-            epoll.poll(timeout)
-            dt = time.perf_counter() - t0
-            self.assertGreaterEqual(dt, timeout)
-
-
     def tearDown(self):
         for skt in self.connections:
             skt.close()
@@ -265,6 +253,17 @@ class TestEPoll(unittest.TestCase):
         epoll = select.epoll()
         self.addCleanup(epoll.close)
         self.assertEqual(os.get_inheritable(epoll.fileno()), False)
+
+    def test_timeout_rounding(self):
+        # epoll_wait() has a resolution of 1 millisecond, check if the timeout
+        # is correctly rounded to the upper bound
+        epoll = select.epoll()
+        self.addCleanup(epoll.close)
+        for timeout in (1e-2, 1e-3, 1e-4):
+            t0 = time.perf_counter()
+            epoll.poll(timeout)
+            dt = time.perf_counter() - t0
+            self.assertGreaterEqual(dt, timeout)
 
 
 def test_main():
